--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# [lib]
+# crate-type = ["cdylib"]
+
 [dependencies]
 ndarray = "0.12.1"
+wasm-bindgen = "0.2"
