Add LICENSE file, repo link, descritpion; uncomment wasm lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,14 @@ name = "rusfun"
 version = "0.1.0"
 authors = ["DomiDre <homiedomi@gmail.com>"]
 edition = "2018"
+description = "Little experimental crate to fit simple models to data via WASM in the browser"
+repository = "https://github.com/domidre/rusfun"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-# [lib]
-# crate-type = ["cdylib"]
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
 ndarray = "0.12.1"
