--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ crate-type = ["cdylib", "lib"]
 
 [dependencies]
 ndarray = "0.12.1"
+gauss-quad = "0.1.2"
 wasm-bindgen = "0.2.48"
 criterion = "0.2"
-
 
 [[bench]]
 name = "quick_benchmark"
